--- a/demo-mvp/package.json
+++ b/demo-mvp/package.json
@@ -9,6 +9,10 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "react-swipeable-views": "^0.12.12",
+    "react-datepicker": "^1.2.2",
+    "moment": "^2.21.0",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.0",
     "truffle-contract": "^3.0.3"
   },
   "scripts": {
