fix(front): move to semantic end. feature(setup): easy setup of truffle context

--- a/demo-mvp/package.json
+++ b/demo-mvp/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
@@ -16,6 +15,7 @@
     "truffle-contract": "^3.0.3"
   },
   "scripts": {
+    "setup": "setup.sh",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
