--- a/RES/package.json
+++ b/RES/package.json
@@ -10,6 +10,7 @@
     "chai": "^4.1.2",
     "testrpc": "^0.0.1",
     "web3": "1.0.0-beta.33",
+    "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.7.0"
   },
   "devDependencies": {
