--- a/demo-mvp/package.json
+++ b/demo-mvp/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
-    "react-datepicker": "^1.2.2",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "react-swipeable-views": "^0.12.12",
+    "react-datepicker": "^1.2.2",
+    "moment": "^2.21.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
-    "truffle-contract": "^3.0.3",
-    "web3": "1.0.0-beta.33"
+    "truffle-contract": "^3.0.3"
   },
   "scripts": {
     "setup": "setup.sh",
