--- a/demo-mvp/package.json
+++ b/demo-mvp/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.21.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
-    "truffle-contract": "^3.0.3"
+    "truffle-contract": "^3.0.3",
+    "web3": "1.0.0-beta.33"
   },
   "scripts": {
     "setup": "setup.sh",
