--- a/demo-mvp/package.json
+++ b/demo-mvp/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.21.0",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
+    "truffle-hdwallet-provider": "0.0.3",
     "truffle-contract": "^3.0.3",
     "web3": "1.0.0-beta.33"
   },
