--- a/RES/package.json
+++ b/RES/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "chai": "^4.1.2",
     "testrpc": "^0.0.1",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "1.0.0-beta.33",
     "zeppelin-solidity": "^1.7.0"
   },
